--- a/zwierzak1.html
+++ b/zwierzak1.html
@@ -20,11 +20,12 @@
 
     // Tworzenie instancji obiektu Zwierzak
     var zwierzak1 = new Zwierzak("Burek", "Pies", "Brązowy", 3, 10, "Domowy");
+    var zwierzak2 = new Zwierzak("Mruczek", "Kot", "Czarny", 2, 5, "Domowy");
 
 
     // Wypisanie atrybutów na konsoli
     console.log("Zwierzak 1:", zwierzak1);
- 
+    console.log("Zwierzak 2:", zwierzak2);
   </script>
 
 </body>
