--- a/zwierzak3.html
+++ b/zwierzak3.html
@@ -21,12 +21,12 @@
     // Tworzenie instancji obiektu Zwierzak
 
     var zwierzak3 = new Zwierzak("Rex", "Pies", "Biały", 4, 15, "Domowy");
-
+    var zwierzak2 = new Zwierzak("Mruczek", "Kot", "Czarny", 2, 5, "Domowy");
 
     // Wypisanie atrybutów na konsoli
 
     console.log("Zwierzak 3:", zwierzak3);
-
+    console.log("Zwierzak 2:", zwierzak2);
   </script>
 
 </body>
