--- a/zwierzak5.html
+++ b/zwierzak5.html
@@ -21,12 +21,12 @@
     // Tworzenie instancji obiektu Zwierzak
 
     var zwierzak5 = new Zwierzak("Fiona", "Chomik", "Złoty", 0.5, 0.2, "Domowy");
-  
+    var zwierzak2 = new Zwierzak("Mruczek", "Kot", "Czarny", 2, 5, "Domowy");
 
     // Wypisanie atrybutów na konsoli
 
     console.log("Zwierzak 5:", zwierzak5);
-   
+    console.log("Zwierzak 2:", zwierzak2);
   </script>
 
 </body>
