dodalem zwierzaka 1 do 2

--- a/zwierzak3.html
+++ b/zwierzak3.html
@@ -21,11 +21,12 @@
     // Tworzenie instancji obiektu Zwierzak
 
     var zwierzak3 = new Zwierzak("Rex", "Pies", "Biały", 4, 15, "Domowy");
-
+    var zwierzak1 = new Zwierzak("Burek", "Pies", "Brązowy", 3, 10, "Domowy");
 
     // Wypisanie atrybutów na konsoli
 
     console.log("Zwierzak 3:", zwierzak3);
+    console.log("Zwierzak 1:", zwierzak1);
 
   </script>
 
