--- a/zwierzak6.html
+++ b/zwierzak6.html
@@ -20,11 +20,12 @@
 
     // Tworzenie instancji obiektu Zwierzak
     var zwierzak6 = new Zwierzak("Charlie", "Królik", "Brązowy", 2, 2.5, "Domowy");
-    var zwierzak2 = new Zwierzak("Mruczek", "Kot", "Czarny", 2, 5, "Domowy");
+   
 
     // Wypisanie atrybutów na konsoli
+    console.log("Lista zwierzaków);
     console.log("Zwierzak 6:", zwierzak6);
-    console.log("Zwierzak 2:", zwierzak2);
+ 
     
   </script>
 
