dodałem słowo "byłem tu"

--- a/zwierzak7.html
+++ b/zwierzak7.html
@@ -23,9 +23,9 @@
    
 
     // Wypisanie atrybutów na konsoli
-    console.log("Lista zwierzaków);
+    console.log("Lista zwierzaków");
     console.log("Zwierzak 7:", zwierzak7);
- 
+ console.log("byłem tuaj");
     
   </script>
 
