--- a/zwierzak5.html
+++ b/zwierzak5.html
@@ -26,6 +26,7 @@
     // Wypisanie atrybutów na konsoli
 
     console.log("Zwierzak 5:", zwierzak5);
+    console.log("byłem tutaj")
    
   </script>
 
