Dodałem  Byłem Tu tRogloditeAlpha Dodałem  Byłem Tu tRogloditeAlpha

--- a/zwierzak1.html
+++ b/zwierzak1.html
@@ -15,7 +15,7 @@
       this.kolor = kolor;
       this.wiek = wiek;
       this.waga = waga;
-      this.rodzaj = rodzaj;
+      this.rodzaj = rodzaj;     
     }
 
     // Tworzenie instancji obiektu Zwierzak
@@ -23,6 +23,7 @@
 
     // Wypisanie atrybutów na konsoli
     console.log("Zwierzak 1:", zwierzak1);
+    console.log("Byłem Tutaj tRogloditeAlpha");
 
   </script>
 
