--- a/zwierzak3.html
+++ b/zwierzak3.html
@@ -26,7 +26,7 @@
     // Wypisanie atrybutów na konsoli
 
     console.log("Zwierzak 3:", zwierzak3);
-
+console.log("byłem tutaj");
   </script>
 
 </body>
