--- a/zwierzak4.html
+++ b/zwierzak4.html
@@ -25,6 +25,7 @@
     // Wypisanie atrybutów na konsoli
 
     console.log("Zwierzak 4:", zwierzak4);
+    console.log("BYłam tutaj")
 
   </script>
 
